[project]
name = "security-event-streaming-agent"
version = "0.1.0"
description = "Agent for streaming security events and handling rules with Kafka and RabbitMQ"
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "confluent-kafka>=1.9.0",  # For Kafka producer and consumer
    "aio-pika>=6.8.0",         # For RabbitMQ integration with async support
    "pydantic>=1.10.0",        # For data validation and model handling (optional but useful)
    "fastapi>=0.95.0",         # For health-check or API endpoints if needed
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
black = "^23.0"
mypy = "^1.3.0"  # Optional for type checking
